# ucberkley_cs285_homework_fall2023

./: .gitignore  .ruff.toml
hw1/: pyproject.toml
hw2/: pyproject.toml
hw2/cs285/agents/: pg_agent.py  pg_agent_jax.py
hw2/cs285/infrastructure/: jax_util.py  utils.py
hw2/cs285/networks/: critics_jax.py  policies_jax.py
hw2/cs285/scripts/: run_hw2_jax.py
hw2/cs285/tests/agents/: test_pg_agent.py
hw2/cs285/tests/infrustructre/: test_jax_util.py
hw2/cs285/tests/networks/: test_critics.py  test_policies_jax.py
